// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data snapshot 1`] = `
<div>
  <h3>
    weather-widget
  </h3>
  <pre>
    <a
      href="https://github.com/sombreroEnPuntas/weather-widget"
    >
      Check the code on github!
    </a>
  </pre>
  <div
    class="wrapper"
  >
    <header
      class="header"
    >
      <article
        class="article"
      >
        Cloudy
      </article>
      <article
        class="article"
      >
        Rivendell
      </article>
    </header>
    <ul
      class="hourlyDataList"
    >
      <li
        class="hourlyData"
      >
        <div>
          11:00
        </div>
        <div>
          04n
        </div>
        <div>
          13
        </div>
      </li>
      <li
        class="hourlyData"
      >
        <div>
          12:00
        </div>
        <div>
          01d
        </div>
        <div>
          12
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`error snapshot 1`] = `
<div>
  <h3>
    weather-widget
  </h3>
  <pre>
    <a
      href="https://github.com/sombreroEnPuntas/weather-widget"
    >
      Check the code on github!
    </a>
  </pre>
  <div
    class="wrapper"
  >
    418: The resulting entity body MAY be short and stout.
  </div>
</div>
`;

exports[`loading snapshot 1`] = `
<div>
  <h3>
    weather-widget
  </h3>
  <pre>
    <a
      href="https://github.com/sombreroEnPuntas/weather-widget"
    >
      Check the code on github!
    </a>
  </pre>
  <div
    class="wrapper"
  >
    loading...
  </div>
</div>
`;
